トップページ修正

--- a/src/index.html
+++ b/src/index.html
@@ -77,16 +77,23 @@
                     <p class="side_btn--text">たかくらリサイクルセンター</p>
                 </a>
             </div>
-            <div class="mainvisual__top">
-                <div class="mainTitle__img">
-                    <img src="./assets/images/top/img-top_title.svg" alt="" />
+            <div class="mainvisual__wrap">
+                <div class="mainvisual__top">
+                    <div class="mainTitle__img">
+                        <img src="./assets/images/top/img-top_title.svg" alt="" />
+                    </div>
+                    <div class="mainvisualPlant__img">
+                        <img src="./assets/images/top/img-top_mainvisualPlant.svg" alt="" />
+                    </div>
+                    <div class="mainvisualCardboard__img">
+                        <img src="assets/images/top/img-top_mainvisalCardboard.svg" alt="" />
+                    </div>
                 </div>
-                <div class="mainvisualPlant__img">
-                    <img src="./assets/images/top/img-top_mainvisualPlant.svg" alt="" />
-                </div>
-                <div class="mainvisualCardboard__img">
-                    <img src="assets/images/top/img-top_mainvisalCardboard.svg" alt="" />
-                </div>
+                <img class="mainvisual__concent" src="./assets/images/top/concent.svg" alt="">
+                <picture>
+                    <source srcset="./assets/images/mainvisual_line_sp.svg"
+                    media="(max-width: 767px)" />
+                <img class="mainvisual__line" src="./assets/images/mainvisual_line.svg" alt="">
             </div>
             <div class="mainvisual__bottom">
                 <div class="mainvisualChara__img">
@@ -144,15 +151,15 @@
                 <img class="about__chara--img1" src="./assets/images/top/about/img-about_chara1.svg" alt="" />
                 <img class="about__chara--surround1" src="./assets/images/top/about/img-about_surround1.svg" alt="" />
                 <img class="about__chara--surround2" src="./assets/images/top/about/img-about_surround2.svg" alt="" />
-                <img class="about__pinkCircle first" src="./assets/images/top/about/img-about_pinkKirakira.svg" alt="" />
+                <img class="about__pinkCircle first" src="./assets/images/top/about/img-about_pinkKirakira_small.svg" alt="" />
                 <img class="about__pinkCircle second" src="./assets/images/top/about/img-about_pinkKirakira.svg" alt="" />
                 <img class="about__pinkCircle third" src="./assets/images/top/about/img-about_pinkKirakira.svg" alt="" />
                 <img class="about__pinkCircle forth" src="./assets/images/top/about/img-about_pinkKirakira.svg" alt="" />
-                <img class="about__pinkCircle fifth" src="./assets/images/top/about/img-about_pinkKirakira.svg" alt="" />
+                <img class="about__pinkCircle fifth" src="./assets/images/top/about/img-about_pinkKirakira_small.svg" alt="" />
                 <img class="about__pinkCircle sixth" src="./assets/images/top/about/img-about_pinkKirakira.svg" alt="" />
-                <img class="about__whiteCircle first" src="./assets/images/top/about/img-about_whiteKirakira.svg"
+                <img class="about__whiteCircle first" src="./assets/images/top/about/img-about_whiteKirakira_small.svg"
                     alt="" />
-                <img class="about__whiteCircle second" src="./assets/images/top/about/img-about_whiteKirakira.svg"
+                <img class="about__whiteCircle second" src="./assets/images/top/about/img-about_whiteKirakira_small.svg"
                     alt="" />
                 <img class="about__whiteCircle third" src="./assets/images/top/about/img-about_whiteKirakira.svg"
                     alt="" />
