キービジュアルを修正

--- a/src/index.html
+++ b/src/index.html
@@ -64,10 +64,90 @@
             </div>
         </div>
     </header>
-    <nav></nav>
+    <nav class="header__menu">
+        <!-- <div class="menu__container">
+            <div class="menu__wrap">
+                <div class="closeBtn"></div>
+                <div class="menu__inner">
+                    <ul class="menu__list">
+                        <li class="menu__item">
+                            <a href="/index.html">
+                                <p class="menu__item--subTitle">TOP</p>
+                                <p class="menu__item--title">トップ</p>
+                            </a>
+                        </li>
+                        <li class="menu__item">
+                            <a href="/index.html">
+                                <p class="menu__item--subTitle">ABOUT</p>
+                                <p class="menu__item--title">TMCの秘密</p>
+                            </a>
+                        </li>
+                        <li class="menu__item">
+                            <a href="/index.html">
+                                <p class="menu__item--subTitle">NEWS</p>
+                                <p class="menu__item--title">おしらせ</p>
+                            </a>
+                        </li>
+                        <li class="menu__item">
+                            <a href="/index.html">
+                                <p class="menu__item--subTitle">CHARACTERS</p>
+                                <p class="menu__item--title">従業員紹介</p>
+                            </a>
+                        </li>
+                        <li class="menu__item">
+                            <a href="/index.html">
+                                <p class="menu__item--subTitle">SERVICE</p>
+                                <p class="menu__item--title">サービス内容</p>
+                            </a>
+                        </li>
+                        <li class="menu__item">
+                            <a href="/index.html">
+                                <p class="menu__item--subTitle">ONLINE STORE</p>
+                                <p class="menu__item--title">オンラインストア</p>
+                            </a>
+                        </li>
+                    </ul>
+                    <div class="menu__btns">
+                        <div class="estimate__btn">無料お見積もり</div>
+                        <div class="tel__btn">                        
+                            <a class="tel__btn--icon" href="#"><img src="./assets/images/icon_tel.svg" alt="tel" /></a>
+                            <div class="telNumberInner">
+                                <p class="tel__telSpeech first">みんな</p>
+                                <p class="tel__telSpeech second">ヨッコイショ！</p>
+                                <p class="tel__telNumber">0120-37-4514</p>
+                                <p class="tel__reception">受付時間 ●：●～●：●</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="menu__link">
+                        <ul class="link__list">
+                            <li class="link__item"><a href="">プライバシーポリシー</a></li>
+                            <li class="link__item"><a href="">特定商取引法に基づく表記</a></li>
+                            <li class="link__item"><a href="">標準引越運送約款</a></li>
+                            <li class="link__item"><a href=""><span class="home__icon"><img src="./assets/images/icon_realestate-white.svg" alt=""><span>たかくら不動産屋さん</a></li>
+                            <li class="link__item"><a href=""><span class="recycle__icon"><img src="./assets/images/icon_recycle-white.svg" alt=""></span>たかくらリサイクルセンター</a></li>
+                        </ul>
+                    </div>
+                    <div class="menu__sns">
+                        <ul class="sns__list">
+                            <li class="sns__item">
+                                <a href=""><img src="./assets/images/icon_x.svg" alt="x" /></a>
+                            </li>
+                            <li class="sns__item">
+                                <a href=""><img src="./assets/images/icon_instagram.svg" alt="instaigram" /></a>
+                            </li>
+                            <li class="sns__item">
+                                <a href=""><img src="./assets/images/icon_line.svg" alt="line" /></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>  -->
+    </nav>
     <main class="main">
         <section class="mainvisual">
-            <div class="side_btnInner">
+            <!-- <div class="side_btnInner">
                 <a class="side_btn orange" href="https://takakurahudousan.com/" target="_blank">
                     <img src="./assets/images/icon_realestate-white.svg" alt="" />
                     <p class="side_btn--text">たかくら不動産屋さん</p>
@@ -76,7 +156,7 @@
                     <img src="./assets/images/icon_recycle-white.svg" alt="" />
                     <p class="side_btn--text">たかくらリサイクルセンター</p>
                 </a>
-            </div>
+            </div> -->
             <div class="mainvisual__wrap">
                 <div class="mainvisual__top">
                     <div class="mainTitle__img">
