--- a/src/index.html
+++ b/src/index.html
@@ -65,37 +65,37 @@
         </div>
     </header>
     <nav class="header__menu">
-        <!-- <div class="menu__container">
+        <div class="menu__container">
             <div class="menu__wrap">
-                <div class="closeBtn"></div>
+                <div class="close__btn"><span class="dli-close"></span></div>
                 <div class="menu__inner">
                     <ul class="menu__list">
                         <li class="menu__item">
-                            <a href="/index.html">
+                            <a href="./index.html">
                                 <p class="menu__item--subTitle">TOP</p>
                                 <p class="menu__item--title">トップ</p>
                             </a>
                         </li>
                         <li class="menu__item">
-                            <a href="/index.html">
+                            <a href="./about.html">
                                 <p class="menu__item--subTitle">ABOUT</p>
                                 <p class="menu__item--title">TMCの秘密</p>
                             </a>
                         </li>
                         <li class="menu__item">
-                            <a href="/index.html">
+                            <a href="./news.html">
                                 <p class="menu__item--subTitle">NEWS</p>
                                 <p class="menu__item--title">おしらせ</p>
                             </a>
                         </li>
                         <li class="menu__item">
-                            <a href="/index.html">
+                            <a href="./characters.html">
                                 <p class="menu__item--subTitle">CHARACTERS</p>
                                 <p class="menu__item--title">従業員紹介</p>
                             </a>
                         </li>
                         <li class="menu__item">
-                            <a href="/index.html">
+                            <a href="./service.html">
                                 <p class="menu__item--subTitle">SERVICE</p>
                                 <p class="menu__item--title">サービス内容</p>
                             </a>
@@ -108,24 +108,26 @@
                         </li>
                     </ul>
                     <div class="menu__btns">
-                        <div class="estimate__btn">無料お見積もり</div>
-                        <div class="tel__btn">                        
-                            <a class="tel__btn--icon" href="#"><img src="./assets/images/icon_tel.svg" alt="tel" /></a>
-                            <div class="telNumberInner">
-                                <p class="tel__telSpeech first">みんな</p>
-                                <p class="tel__telSpeech second">ヨッコイショ！</p>
-                                <p class="tel__telNumber">0120-37-4514</p>
-                                <p class="tel__reception">受付時間 ●：●～●：●</p>
+                        <a href="./estimate.html"><div class="estimate__btn"><img src="./assets/images/click.svg" alt=""><span>無料お見積もり</span></div></a>
+                        <a href="tel:120374514">
+                            <div class="tel__btn">                        
+                                <a class="tel__btn--icon" href="#"><img src="./assets/images/icon_tel.svg" alt="tel" /></a>
+                                <div class="telNumberInner">
+                                    <p class="tel__telSpeech first">みんな</p>
+                                    <p class="tel__telSpeech second">ヨッコイショ！</p>
+                                    <p class="tel__telNumber">0120-37-4514</p>
+                                    <p class="tel__reception">受付時間 ●：●～●：●</p>
+                                </div>
                             </div>
-                        </div>
+                        </a>
                     </div>
                     <div class="menu__link">
                         <ul class="link__list">
                             <li class="link__item"><a href="">プライバシーポリシー</a></li>
+                            <li class="link__item icon__item1"><a href=""><span class="home__icon"><img src="./assets/images/icon_realestate.svg" alt=""><span>たかくら不動産屋さん</a></li>
                             <li class="link__item"><a href="">特定商取引法に基づく表記</a></li>
+                            <li class="link__item icon__item2"><a href=""><span class="recycle__icon"><img src="./assets/images/icon_recycle.svg" alt=""></span>たかくらリサイクルセンター</a></li>
                             <li class="link__item"><a href="">標準引越運送約款</a></li>
-                            <li class="link__item"><a href=""><span class="home__icon"><img src="./assets/images/icon_realestate-white.svg" alt=""><span>たかくら不動産屋さん</a></li>
-                            <li class="link__item"><a href=""><span class="recycle__icon"><img src="./assets/images/icon_recycle-white.svg" alt=""></span>たかくらリサイクルセンター</a></li>
                         </ul>
                     </div>
                     <div class="menu__sns">
@@ -143,7 +145,7 @@
                     </div>
                 </div>
             </div>
-        </div>  -->
+        </div> 
     </nav>
     <main class="main">
         <section class="mainvisual">
