sp版メニュー順番の修正

--- a/src/index.html
+++ b/src/index.html
@@ -70,37 +70,37 @@
                 <div class="close__btn"><span class="dli-close"></span></div>
                 <div class="menu__inner">
                     <ul class="menu__list">
-                        <li class="menu__item">
+                        <li class="menu__item menu__item1">
                             <a href="./index.html">
                                 <p class="menu__item--subTitle">TOP</p>
                                 <p class="menu__item--title">トップ</p>
                             </a>
                         </li>
-                        <li class="menu__item">
+                        <li class="menu__item menu__item2">
                             <a href="./about.html">
                                 <p class="menu__item--subTitle">ABOUT</p>
                                 <p class="menu__item--title">TMCの秘密</p>
                             </a>
                         </li>
-                        <li class="menu__item">
+                        <li class="menu__item menu__item3">
                             <a href="./news.html">
                                 <p class="menu__item--subTitle">NEWS</p>
                                 <p class="menu__item--title">おしらせ</p>
                             </a>
                         </li>
-                        <li class="menu__item">
+                        <li class="menu__item menu__item4">
                             <a href="./characters.html">
                                 <p class="menu__item--subTitle">CHARACTERS</p>
                                 <p class="menu__item--title">従業員紹介</p>
                             </a>
                         </li>
-                        <li class="menu__item">
+                        <li class="menu__item menu__item5">
                             <a href="./service.html">
                                 <p class="menu__item--subTitle">SERVICE</p>
                                 <p class="menu__item--title">サービス内容</p>
                             </a>
                         </li>
-                        <li class="menu__item">
+                        <li class="menu__item menu__item6">
                             <a href="/index.html">
                                 <p class="menu__item--subTitle">ONLINE STORE</p>
                                 <p class="menu__item--title">オンラインストア</p>
