serviceページpointセクション1440~幅完了

--- a/src/service.html
+++ b/src/service.html
@@ -147,7 +147,7 @@
             </div>
         </div> 
     </nav>
-    <main>
+    <main class="service__page">
         <section class="lowermain">
             <div class="lowermain_inner">
                 <div class="page__title--inner">
