service__about 見出し作成

--- a/src/service.html
+++ b/src/service.html
@@ -241,7 +241,9 @@
         </section>
         <section class="service__about">
             <div class="service__about--title">
+                <span class="headline__line"></span>
                 <h3>対象サービス</h3>
+                <span class="headline__line"></span>
             </div>
             <div class="grid__column about__column">
                 <div class="about__column--item">
