serviceページpc版作成途中コミット

--- a/src/service.html
+++ b/src/service.html
@@ -248,55 +248,49 @@
             <div class="grid__column about__column">
                 <div class="about__column--item">
                     <div class="about__column--img">
-                        <img src="" alt="">
+                        <img src="./assets/images/service/about_service1.png" alt="">
                     </div>
                     <p class="about__column--text"><span>テレビの配線無料</span><br><span class="small">（電気工事がいらない程度）</span></p>
                 </div>
                 <div class="about__column--item">
                     <div class="about__column--img">
-                        <img src="" alt="">
-                    </div>
-                    <p class="about__column--text"><span>{text}</span><span class="small">{smalltext}</span></p>
-                </div>
-                <div class="about__column--item">
-                    <div class="about__column--img">
-                        <img src="" alt="">
+                        <img src="./assets/images/service/about_service2.png" alt="">
                     </div>
                     <p class="about__column--text"><span>洗濯機の<br>取外し・取付無料</span></p>
                 </div>
                 <div class="about__column--item">
                     <div class="about__column--img">
-                        <img src="" alt="">
+                        <img src="./assets/images/service/about_service3.png" alt="">
                     </div>
                     <p class="about__column--text"><span>ハンガーボックス<br>あり</span></p>
                 </div>
                 <div class="about__column--item">
                     <div class="about__column--img">
-                        <img src="" alt="">
+                        <img src="./assets/images/service/about_service4.png" alt="">
                     </div>
                     <p class="about__column--text"><span>布団袋あり</span></p>
                 </div>
                 <div class="about__column--item">
                     <div class="about__column--img">
-                        <img src="" alt="">
+                        <img src="./assets/images/service/about_service5.png" alt="">
                     </div>
                     <p class="about__column--text"><span>整理収納<br>アドバイザー</span></p>
                 </div>
                 <div class="about__column--item">
                     <div class="about__column--img">
-                        <img src="" alt="">
+                        <img src="./assets/images/service/about_service6.png" alt="">
                     </div>
                     <p class="about__column--text"><span>その他</span><br><span class="small">（例：簡易掃除）</span></p>
                 </div>
                 <div class="about__column--item">
                     <div class="about__column--img">
-                        <img src="" alt="">
+                        <img src="./assets/images/service/about_service7.png" alt="">
                     </div>
                     <p class="about__column--text"><span>クレーンでの<br>搬入・搬出</span><span class="small">（有料・委託）</span></p>
                 </div>
                 <div class="about__column--item">
                     <div class="about__column--img">
-                        <img src="" alt="">
+                        <img src="./assets/images/service/about_service8.png" alt="">
                     </div>
                     <p class="about__column--text"><span>エアコン<br>取外し・取付</span><span class="small">（有料・委託）</span></p>
                 </div>
@@ -311,23 +305,32 @@
         <section class="service__flow">
             <div class="page__title--inner">
                 <p class="page__subTitle">FLOW</p>
-                <h2>サービスの流れ</h2>
+                <h2 class="page__title">サービスの流れ</h2>
             </div>
             <div class="flow__inner">
                 <div class="flow__item">
                     <div class="flow__item--title">
                         <p>引越しの前にまず準備</p>
                     </div>
-                    <div class="flow__item--slide">
-                        <img src="" alt="">
+                    <div class="flow__item--slide js-slide">
+                        <img src="./assets/images/service/flow_preparation1.jpg" alt="">
+                        <img src="./assets/images/service/flow_preparation2.jpg" alt="">
+                        <img src="./assets/images/service/flow_preparation3.jpg" alt="">
+                        <img src="./assets/images/service/flow_preparation4.jpg" alt="">
+                        <img src="./assets/images/service/flow_preparation5.jpg" alt="">
                     </div>
                 </div>
                 <div class="flow__item">
                     <div class="flow__item--title">
                         <p>お引越し当日の流れ</p>
                     </div>
-                    <div class="flow__item--slide">
-                        <img src="" alt="">
+                    <div class="flow__item--slide js-slide">
+                        <img src="./assets/images/service/flow_currentDay1.jpg" alt="">
+                        <img src="./assets/images/service/flow_currentDay2.jpg" alt="">
+                        <img src="./assets/images/service/flow_currentDay3.jpg" alt="">
+                        <img src="./assets/images/service/flow_currentDay4.jpg" alt="">
+                        <img src="./assets/images/service/flow_currentDay5.jpg" alt="">
+                        <img src="./assets/images/service/flow_currentDay6.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -338,16 +341,16 @@
         <section class="service__introduction">
             <div class="page__title--inner">
                 <p class="page__subTitle">引越しが楽しくなる！</p>
-                <h2>こだわりの段ボール紹介</h2>
+                <h2 class="page__title">こだわりの段ボール紹介</h2>
             </div>
             <div class="introduction__column">
                 <div class="introduction__size">
                     <div class="size__tags">
                         <div class="tag">小</div>
-                        <div class="tag">大</div>
+                        <div class="tag active">大</div>
                     </div>
                     <div class="size__img">
-                        <img src="" alt="">
+                        <img src="./assets/images/service/detailed1.jpg" alt="">
                     </div>
                     <div class="size__pagenation">
                         <div class="pagenation"></div>
@@ -356,7 +359,6 @@
                 </div>
                 <div class="introduction__point">
                     <div class="point__img">
-
                     </div>
                     <div class="point__content">
                         <p class="service__column--title">うれしいPOINT</p>
