serviceページ段ボール紹介修正

--- a/src/service.html
+++ b/src/service.html
@@ -359,6 +359,7 @@
                 </div>
                 <div class="introduction__point">
                     <div class="point__img">
+                        <img src="" alt="">
                     </div>
                     <div class="point__content">
                         <p class="service__column--title">うれしいPOINT</p>
