--- a/src/service.html
+++ b/src/service.html
@@ -362,20 +362,28 @@
                         <img src="" alt="">
                     </div>
                     <div class="point__content">
-                        <p class="service__column--title">うれしいPOINT</p>
-                        <h4 class="point__content--title">引越し後も活用できちゃう！</h4>
-                        <p class="point__content--text">点線部分をハサミで切って折り込むと<br>
-                            うさぎの耳が現れます！<br>
-                            残りを内側に折り込んだら完成！<br>
-                            電車ごっこで遊んだり<br>
-                            ペットのくつろぎスペースに♪</p>
+                        <div class="point__content--inner">
+                            <p class="service__column--title">うれしいPOINT</p>
+                            <h4 class="point__content--title">引越し後も活用できちゃう！</h4>
+                            <svg class="point__content--line" viewBox="0 0 340 10">
+                                <line x1="0" y1="0" x2="340" y2="0"/>
+                            </svg>
+                            <p class="point__content--text">点線部分をハサミで切って折り込むと<br>
+                                うさぎの耳が現れます！<br>
+                                残りを内側に折り込んだら完成！<br>
+                                電車ごっこで遊んだり<br>
+                                ペットのくつろぎスペースに♪</p>
+                        </div>
                     </div>
                 </div>
             </div>
+            <div class="bgPinkText__inner palePink">
+                <p class="bgPinkText">TMC TMC TMC TMC TMC</p>
+            </div>
         </section>
-        <section class="service__message">
-            <img class="message__bg--title" src="" alt="">
-            <img class="message__chara--img" src="" alt="">
+        <section class="service__message message">
+            <img class="message__bg--title" src="./assets/images/message_title.svg" alt="">
+            <img class="message__chara--img" src="./assets/images/message__chara.svg" alt="">
             <div class="message__inner">
                 <p class="message__text">たかくら引越センターの段ボールは、<br>
                     「引越しを楽しんでもらいたい」そんな思いで作りました。<br>
