serviceページタブレット幅調整

--- a/src/service.html
+++ b/src/service.html
@@ -203,7 +203,7 @@
                     <div class="point__column--img">
                         <img class="point__column--chara" src=""
                             alt="" />
-                        <svg xmlns="http://www.w3.org/2000/svg" width="290.509" height="288.298" viewBox="0 0 292.509 292.298">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 292.509 292.298">
                             <path id="パス_397" data-name="パス 397" d="M444.434,3454c0,9.416-8.89,17.324-10.65,26.223-1.814,9.169,8.1,21.833,4.6,30.27-3.56,8.584-19.153,10.784-24.261,18.414-5.147,7.688-2.229,21.947-8.748,28.466s-18.232,7.4-25.92,12.55c-7.63,5.108-12.535,16.516-21.119,20.075-8.436,3.5-20.715-4.888-29.885-3.075-8.9,1.761-17.032,13.025-26.448,13.025s-18.067-8.646-26.966-10.406c-9.17-1.814-20.118,1.993-28.554-1.506-8.584-3.559-14.577-12.6-22.206-17.7-7.689-5.148-19.586-5.984-26.1-12.5s-6.848-18.756-11.995-26.444c-5.108-7.63-12.926-14-16.486-22.582-3.5-8.436-.592-18.832-2.406-28-1.76-8.9-11.358-17.387-11.358-26.8s10.024-17.819,11.785-26.719c1.813-9.169-3.629-20.524-.131-28.961,3.56-8.584,15.8-12.531,20.906-20.161,5.147-7.688,5.084-19.553,11.6-26.072s19.307-5.077,26.995-10.224c7.63-5.108,11.88-15.767,20.464-19.327,8.437-3.5,18.589-.891,27.759-2.7,8.9-1.76,17.278-8.181,26.694-8.181s18.316,3.789,27.215,5.549c9.17,1.814,20.518-2.3,28.955,1.2,8.584,3.559,12.559,16.207,20.188,21.315,7.689,5.147,19.938,4.956,26.456,11.474s7.276,18.133,12.423,25.821c5.108,7.63,16.283,12.457,19.843,21.041,3.5,8.436-5.009,20.54-3.2,29.709C435.645,3436.657,444.434,3444.584,444.434,3454Z" transform="translate(-155.925 -3311.65)" fill="#fff2f6" stroke="#231815" stroke-width="3"/>
                         </svg>
                     </div>
@@ -216,7 +216,7 @@
                     <div class="point__column--img">
                         <img class="point__column--chara" src=""
                             alt="" />
-                        <svg xmlns="http://www.w3.org/2000/svg" width="290.509" height="288.298" viewBox="0 0 292.509 292.298">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 292.509 292.298">
                             <path id="パス_397" data-name="パス 397" d="M444.434,3454c0,9.416-8.89,17.324-10.65,26.223-1.814,9.169,8.1,21.833,4.6,30.27-3.56,8.584-19.153,10.784-24.261,18.414-5.147,7.688-2.229,21.947-8.748,28.466s-18.232,7.4-25.92,12.55c-7.63,5.108-12.535,16.516-21.119,20.075-8.436,3.5-20.715-4.888-29.885-3.075-8.9,1.761-17.032,13.025-26.448,13.025s-18.067-8.646-26.966-10.406c-9.17-1.814-20.118,1.993-28.554-1.506-8.584-3.559-14.577-12.6-22.206-17.7-7.689-5.148-19.586-5.984-26.1-12.5s-6.848-18.756-11.995-26.444c-5.108-7.63-12.926-14-16.486-22.582-3.5-8.436-.592-18.832-2.406-28-1.76-8.9-11.358-17.387-11.358-26.8s10.024-17.819,11.785-26.719c1.813-9.169-3.629-20.524-.131-28.961,3.56-8.584,15.8-12.531,20.906-20.161,5.147-7.688,5.084-19.553,11.6-26.072s19.307-5.077,26.995-10.224c7.63-5.108,11.88-15.767,20.464-19.327,8.437-3.5,18.589-.891,27.759-2.7,8.9-1.76,17.278-8.181,26.694-8.181s18.316,3.789,27.215,5.549c9.17,1.814,20.518-2.3,28.955,1.2,8.584,3.559,12.559,16.207,20.188,21.315,7.689,5.147,19.938,4.956,26.456,11.474s7.276,18.133,12.423,25.821c5.108,7.63,16.283,12.457,19.843,21.041,3.5,8.436-5.009,20.54-3.2,29.709C435.645,3436.657,444.434,3444.584,444.434,3454Z" transform="translate(-155.925 -3311.65)" fill="#fff2f6" stroke="#231815" stroke-width="3"/>
                         </svg>
                     </div>
@@ -229,7 +229,7 @@
                     <div class="point__column--img">
                         <img class="point__column--chara" src=""
                             alt="" />
-                        <svg xmlns="http://www.w3.org/2000/svg" width="290.509" height="288.298" viewBox="0 0 292.509 292.298">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 292.509 292.298">
                             <path id="パス_397" data-name="パス 397" d="M444.434,3454c0,9.416-8.89,17.324-10.65,26.223-1.814,9.169,8.1,21.833,4.6,30.27-3.56,8.584-19.153,10.784-24.261,18.414-5.147,7.688-2.229,21.947-8.748,28.466s-18.232,7.4-25.92,12.55c-7.63,5.108-12.535,16.516-21.119,20.075-8.436,3.5-20.715-4.888-29.885-3.075-8.9,1.761-17.032,13.025-26.448,13.025s-18.067-8.646-26.966-10.406c-9.17-1.814-20.118,1.993-28.554-1.506-8.584-3.559-14.577-12.6-22.206-17.7-7.689-5.148-19.586-5.984-26.1-12.5s-6.848-18.756-11.995-26.444c-5.108-7.63-12.926-14-16.486-22.582-3.5-8.436-.592-18.832-2.406-28-1.76-8.9-11.358-17.387-11.358-26.8s10.024-17.819,11.785-26.719c1.813-9.169-3.629-20.524-.131-28.961,3.56-8.584,15.8-12.531,20.906-20.161,5.147-7.688,5.084-19.553,11.6-26.072s19.307-5.077,26.995-10.224c7.63-5.108,11.88-15.767,20.464-19.327,8.437-3.5,18.589-.891,27.759-2.7,8.9-1.76,17.278-8.181,26.694-8.181s18.316,3.789,27.215,5.549c9.17,1.814,20.518-2.3,28.955,1.2,8.584,3.559,12.559,16.207,20.188,21.315,7.689,5.147,19.938,4.956,26.456,11.474s7.276,18.133,12.423,25.821c5.108,7.63,16.283,12.457,19.843,21.041,3.5,8.436-5.009,20.54-3.2,29.709C435.645,3436.657,444.434,3444.584,444.434,3454Z" transform="translate(-155.925 -3311.65)" fill="#fff2f6" stroke="#231815" stroke-width="3"/>
                         </svg>
                     </div>
@@ -312,7 +312,7 @@
                     <div class="flow__item--title">
                         <p>引越しの前にまず準備</p>
                     </div>
-                    <div class="flow__item--slide js-slide">
+                    <div class="flow__item--slide js-slide--service">
                         <img src="./assets/images/service/flow_preparation1.jpg" alt="">
                         <img src="./assets/images/service/flow_preparation2.jpg" alt="">
                         <img src="./assets/images/service/flow_preparation3.jpg" alt="">
@@ -324,7 +324,7 @@
                     <div class="flow__item--title">
                         <p>お引越し当日の流れ</p>
                     </div>
-                    <div class="flow__item--slide js-slide">
+                    <div class="flow__item--slide js-slide--service">
                         <img src="./assets/images/service/flow_currentDay1.jpg" alt="">
                         <img src="./assets/images/service/flow_currentDay2.jpg" alt="">
                         <img src="./assets/images/service/flow_currentDay3.jpg" alt="">
