serviceページtb幅調整

--- a/src/service.html
+++ b/src/service.html
@@ -353,8 +353,8 @@
                         <img src="./assets/images/service/detailed1.jpg" alt="">
                     </div>
                     <div class="size__pagenation">
-                        <div class="pagenation"></div>
-                        <div class="pagenation"></div>
+                        <div class="pagenation prev"></div>
+                        <div class="pagenation next"></div>
                     </div>
                 </div>
                 <div class="introduction__point">
